--- a/about.html
+++ b/about.html
@@ -207,7 +207,8 @@
 
                                               <div class="col-sm-9">
 
-                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed living in Dhaka, Bangladesh. I am a learner and a teacher having interests on the topics stated below. I also have a knack for personal branding, personal finance, tech and productivity. And I also love two more things: your cat and my coffee. Besides my academics I am also working on some personal projects and case studies about which I will keep updating in my website and social platform.  
+                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed, living in Dhaka, Bangladesh. I have interests in Analytics, the interdisciplinary nature of UX, the opportunities of the blockchain technology and the development of successful products which is satisfying the customer needs and evolving in a scalable manner. I am working on some personal projects and case studies on these topics which I will keep updating in my website and social platforms. Also I love two more things: your cat and my coffee.
+  
                                                   </h2>
 
                                               </div>
@@ -235,8 +236,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-01.svg" alt="image" />
-                                                  <h3>Data Analytics</h3>
-                                                  <p>Data analytics helps to analyze and visualize data to make better and informed decisions. I am not fond of gut feelings and it never worked for me, what I think will happen , it might not happen as thought. But the data ‘is what it is’ . I believe in data-driven decisions and from this belief I started learning data analytics.</p>
+                                                  <h3>Analytics</h3>
+                                                  <!--<p>Data analytics helps to analyze and visualize data to make better and informed decisions. I am not fond of gut feelings and it never worked for me, what I think will happen , it might not happen as thought. But the data ‘is what it is’ . I believe in data-driven decisions and from this belief I started learning data analytics.</p>-->
                                               </div>
                                               <!-- service -->
 
@@ -249,8 +250,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-02.svg" alt="image" />
-                                                  <h3>UX Design</h3>
-                                                  <p>Its interdisciplinary nature and how it plugs into any field is why I got interested in UX design. To understand the relationship between humans and technology, the relationship between humans and products excites me and UX design is a great way to learn the both sides of the equation. </p>
+                                                  <h3>UX</h3>
+                                                  <!--<p>Its interdisciplinary nature and how it plugs into any field is why I got interested in UX design. To understand the relationship between humans and technology, the relationship between humans and products excites me and UX design is a great way to learn the both sides of the equation. </p>-->
                                               </div>
                                               <!-- service -->
 
@@ -263,8 +264,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/icons8-learning-100.png" alt="image" style="opacity: 0.6;"/>
-                                                  <h3>Machine Learning</h3>
-                                                  <p>Machine learning covers significant ground in various verticals. The application of ML in data analytics, research and in developing tech products interests me.</p>
+                                                  <h3>Blockchain</h3>
+                                                  <!--<p>Machine learning covers significant ground in various verticals. The application of ML in data analytics, research and in developing tech products interests me.</p>-->
                                               </div>
                                               <!-- service -->
 
@@ -277,8 +278,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-04.svg" alt="image" />
-                                                  <h3>Products</h3>
-                                                  <p> I am curious to learn and research about products that are solving problems, satisfying customer needs and evolving in a scalable manner. I will be writing about various products (existing and product ideas) on my blog section and also would love to hear your thoughts and ideas on the products you are interested in.</p>
+                                                  <h3>Product Development</h3>
+                                                  <!--<p> I am curious to learn and research about products that are solving problems, satisfying customer needs and evolving in a scalable manner. I will be writing about various products (existing and product ideas) on my blog section and also would love to hear your thoughts and ideas on the products you are interested in.</p>-->
                                               </div>
                                               <!-- service -->
 
@@ -347,19 +348,7 @@
                                           </div>
                                           <!-- col -->
 
-                                          <!-- col -->
-                                          <div class="col-xs-6 col-sm-3">
-
-                                              <!-- client -->
-                                              <div class="client">
-                                                  <a href="https://www.facebook.com/porikolponafoundation">
-                                                      <img src="images/site/client-04.png" alt="client">
-                                                  </a>
-                                              </div>
-                                              <!-- client -->
-
-                                          </div>
-                                          <!-- col -->
+                            
 
                                           <!-- col -->
                                           <div class="col-xs-6 col-sm-3">
@@ -403,19 +392,7 @@
                                           </div>
                                           <!-- col -->
 
-                                          <!-- col -->
-                                          <div class="col-xs-6 col-sm-3">
-
-                                              <!-- client -->
-                                              <div class="client">
-                                                  <a href="https://www.youtube.com/channel/UCQYv2NVzn_ej1Vbt-4SPHkw">
-                                                      <img src="images/site/client-08.png" alt="client">
-                                                  </a>
-                                              </div>
-                                              <!-- client -->
-
-                                          </div>
-                                          <!-- col -->
+                                          
 
 
 
