--- a/resume.html
+++ b/resume.html
@@ -304,9 +304,9 @@
                                                 <div class="testo">
                                                     <img src="images/site/testo-04.jpg" alt="someone">
                                                     <h3>Sadat Bin Haque</h3>
-                                                    <h5>Jr. Product Manager</h5>
+                                                    <h5>Jr. Product Manager, Shop-UP,<br> President, IUT CBS (Year- 2020)</h5>
                                                     <p>sadatbinhaque@gmail.com</p>
-                                                    <p>Rafin worked as a motion designer for IUT Career & Business Society. He is a very skillful and talented individual. He efficiently visualised many creative ideas and helped to strengthen the brand image. His contributions had significant impact for increasing the social media reach of our club.</p>
+                                                    <p>Ishtiak is a very skillful and talented individual. He efficiently visualised many creative ideas and helped to strengthen the brand image of IUT Career and Business Society. His contributions had significant impact for increasing the social media reach of our club.</p>
 
                                                 </div>
                                                 <!-- Testimonial -->
