--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <span class="item-name">Case Study</span>
             </a>
 		<!-- <a href="portfolio.html" data-slug="portfolio">
-                <span class="item-name">Project</span>
+                <span class="item-name">Projects</span>
             </a> -->
             <a href="blog-category.html" data-slug="blog-category">
                 <span class="item-name">Blog</span>
