--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="case-study.html" data-slug="case-study">
                 <span class="item-name">Case Study</span>
             </a>
-		<!-- <a href="portfolio.html" data-slug="portfolio">
+		<!-- <a href="projects.html.html" data-slug="portfolio">
                 <span class="item-name">Projects</span>
             </a> -->
             <a href="blog-category.html" data-slug="blog-category">
