--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <a href="case-study.html" data-slug="case-study">
                 <span class="item-name">Case Study</span>
             </a>
-		<!-- <a href="projects.html.html" data-slug="portfolio">
+		<a href="projects.html.html" data-slug="portfolio">
                 <span class="item-name">Projects</span>
-            </a> -->
+            </a>
             <a href="blog-category.html" data-slug="blog-category">
                 <span class="item-name">Blog</span>
             </a>
