--- a/resume.html
+++ b/resume.html
@@ -279,7 +279,7 @@
 
 
 
-                                                <p><a href="https://drive.google.com/file/d/1iaBd2mmn1R2se8UoyPxExQfsB5CNmX6i/view?usp=sharing"></i>Download
+                                                <p><a href="https://drive.google.com/file/d/1iaBd2mmn1R2se8UoyPxExQfsB5CNmX6i/view?usp=sharing" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
                                                         Resume</a></p>
 
                                             </div>
