--- a/case-study.html
+++ b/case-study.html
@@ -243,6 +243,23 @@
 
 
                                             </div> 
+						
+						<!-- portfolio-item -->
+                                            <div class="media-cell analytics hentry">
+
+                                                <div class="media-box">
+                                                    <img src="images/blog/04.jpg" alt="portfolio-post">
+                                                    <div class="mask"></div>
+                                                    <a href="https://ishtiak138.hashnode.dev/creating-an-automated-dashboard-using-power-bi-for-rapid-hardware-to-track-their-sales"  ></a>
+                                                </div>
+
+                                                <div class="media-cell-desc">
+                                                    <h3> <a href="https://ishtiak138.hashnode.dev/creating-an-automated-dashboard-using-power-bi-for-rapid-hardware-to-track-their-sales"  > Creating an automated dashboard using Power BI for Rapid Hardware to track their sales </a></h3>
+                                                    <p class="category">April 19, 2022</p>
+                                                </div>
+
+
+                                            </div> 
 
                                             <!-- portfolio-item 
                                             <div class="media-cell tech hentry">
