--- a/case-study.html
+++ b/case-study.html
@@ -248,7 +248,7 @@
                                             <div class="media-cell analytics hentry">
 
                                                 <div class="media-box">
-                                                    <img src="images/blog/04.jpg" alt="portfolio-post">
+                                                    <img src="images/blog/04.png" alt="portfolio-post">
                                                     <div class="mask"></div>
                                                     <a href="https://ishtiak138.hashnode.dev/creating-an-automated-dashboard-using-power-bi-for-rapid-hardware-to-track-their-sales"  ></a>
                                                 </div>
