--- a/case-study.html
+++ b/case-study.html
@@ -260,6 +260,23 @@
 
 
                                             </div> 
+						
+						<!-- portfolio-item -->
+                                            <div class="media-cell analytics hentry">
+
+                                                <div class="media-box">
+                                                    <img src="images/blog/05.png" alt="portfolio-post">
+                                                    <div class="mask"></div>
+                                                    <a href="https://ishtiak138.hashnode.dev/study-of-a-trained-data-using-advanced-dax"  ></a>
+                                                </div>
+
+                                                <div class="media-cell-desc">
+                                                    <h3> <a href="https://ishtiak138.hashnode.dev/study-of-a-trained-data-using-advanced-dax"  > Study of a trained data using advanced DAX </a></h3>
+                                                    <p class="category">April 20, 2022</p>
+                                                </div>
+
+
+                                            </div> 
 
                                             <!-- portfolio-item 
                                             <div class="media-cell tech hentry">
